compiler/testData/diagnostics/tests/override/AbstractFunNotImplemented.jet
abstract class A {
    abstract fun foo(): Int
}

class <!ABSTRACT_MEMBER_NOT_IMPLEMENTED!>B<!>() : A() {
}
